kubernetes/projects/applications/apps/shipyardhq/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: shipyardhq
  labels:
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: shipyardhq
    field.cattle.io/projectId: p-applications
    kubernetes.io/metadata.name: shipyardhq
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
  annotations:
    field.cattle.io/projectId: local:p-applications
    helm.sh/resource-policy: keep
    meta.helm.sh/release-name: shipyardhq
    meta.helm.sh/release-namespace: shipyardhq
