kubernetes/projects/applications/apps/shipyardhq/imgproxy-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: shipyardhq-imgproxy
  namespace: shipyardhq
  labels:
    app.kubernetes.io/name: shipyardhq-imgproxy
    app.kubernetes.io/component: image-proxy
    app.kubernetes.io/part-of: shipyardhq
spec:
  type: ClusterIP
  trafficDistribution: PreferSameNode
  selector:
    app.kubernetes.io/name: shipyardhq-imgproxy
    app.kubernetes.io/component: image-proxy
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
    - name: metrics
      port: 9090
      targetPort: metrics
      protocol: TCP
