kubernetes/projects/applications/apps/shipyardhq/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: shipyardhq
  namespace: shipyardhq
  labels:
    app.kubernetes.io/name: shipyardhq
    app.kubernetes.io/component: web
    app.kubernetes.io/part-of: shipyardhq
spec:
  type: ClusterIP
  trafficDistribution: PreferSameNode
  selector:
    app.kubernetes.io/name: shipyardhq
    app.kubernetes.io/component: web
  ports:
    - name: http
      port: 3000
      targetPort: http
      protocol: TCP
